--- a/mysite/templates/pagos/pagos_eliminados.html
+++ b/mysite/templates/pagos/pagos_eliminados.html
@@ -84,6 +84,8 @@
     )
 
     $(document).ready(() => {
+        let formatOptions = {style: 'decimal', minimumFractionDigits: 2, minimumFractionDigits: 2}
+        let numberFormat = new Intl.NumberFormat('en-US', formatOptions)
         let table = $('#data_table').DataTable({
             ajax: {
                     url: '/pagos/pagos_eliminados_list/',
@@ -122,7 +124,7 @@
                 ],
                 order: [[2, 'asc'], [4, 'asc']],
                 rowGroup: {
-                    dataSrc: [ 'pago_user', 'tipo_pago' ],
+                    dataSrc: [ 'userInfo', 'tipo_pago' ],
                     endRender: ( rows, group, index ) => {
                         let totalPago = rows
                         .data()
@@ -131,14 +133,18 @@
                             return a + b*1
                         }, 0)
                         return $('<tr/>')
-                        .append( `<td colspan="9" class=${index%2===0 ? "tot" : "sub"}><strong>${index%2===0 ?  'Total' : 'Subtotal'}</strong></td>` )
-                        .append( `<td colspan="1"><strong>Q${totalPago}<strong></td>` )
+                        .append( `<td colspan="8" class=${index%2===0 ? "tot" : "sub"}><strong>${index%2===0 ?  'Total' : 'Subtotal'}</strong></td>` )
+                        .append( `<td colspan="1"><strong>Q${numberFormat.format(totalPago)}<strong></td>` )
 
                     },
                 },
                 columnDefs: [ 
-                    { targets: [0], visible: false },
+                    { targets: [0, 1], visible: false },
                     { searchable: false, targets: 5 },
+                    {
+                        targets: 10,
+                        render: $.fn.dataTable.render.number(',', '.', 2, '')
+                    },
                 ],
                 rowId: 'id'
         })
