--- a/mysite/templates/pagos/cobros_extra.html
+++ b/mysite/templates/pagos/cobros_extra.html
@@ -3,12 +3,10 @@
 {% extends 'base_datatable.html' %}
 
 {% block content %}
-<h1>Cobros Extra</h1>
-<hr>
 
 <div class="container">
 	<form action="" method="post">
-		<h4 class="form-title">Crear cobro extra</h4>
+		<h4 class="form-title">Ingresar Cobro Extra</h4>
 				{% csrf_token %}
 				{{form_cobros_extra}}
 		<div class="btn-container">
