--- a/mysite/templates/pagos/saldo_consulta.html
+++ b/mysite/templates/pagos/saldo_consulta.html
@@ -144,7 +144,7 @@
                         let totalSaldo = totalPorVencer + totalVencido + totalPagado
                         let diferenecia = Math.abs(totalSaldo-totalPagado)
                         return $('<tr/>')
-                        .append( `${index%2===0 ?  '<td colspan="1" class="tot" style="background-color: rgb(116, 186, 255);"> Saldo Total: ' + numberFormat.format(totalSaldo) + '</td><td colspan="1" class="tot" style="background-color: rgb(116, 186, 255);">Total Pagado: '+ numberFormat.format(totalPagado) + '</td>' + '<td colspan="1" class="tot" style="background-color: rgb(116, 186, 255);">Diferencia Total: '+ numberFormat.format(diferenecia) + '</td>' : '<td colspan="2" class="sub" style="padding-left: 1.5em; background-color: rgb(106, 168, 230);"> SubTotal: </td> <td style="background-color: rgb(106, 168, 230);">' + numberFormat.format(totalPago) + '</td>'}` )
+                        .append( `${index%2===0 ?  '<td colspan="2" class="tot" style="background-color: rgb(116, 186, 255);"> Saldo Total: ' + numberFormat.format(totalSaldo) + '</td><td colspan="1" class="tot" style="background-color: rgb(116, 186, 255);">Total Pagado: '+ numberFormat.format(totalPagado) + '</td>' + '<td colspan="1" class="tot" style="background-color: rgb(116, 186, 255);">Diferencia Total: '+ numberFormat.format(diferenecia) + '</td>' : '<td colspan="3" class="sub" style="padding-left: 1.5em; background-color: rgb(106, 168, 230);"> SubTotal: </td> <td style="background-color: rgb(106, 168, 230);">' + numberFormat.format(totalPago) + '</td>'}` )
                         //.append( `<td colspan="2" class=${index%2===0 ? "tot" : "sub"}>${index%2===0 ?  'Saldo Total:' /*+ totalSaldo*/ : 'Saldo SubTotal:'}</td>` )
                         //.append( `<td>${totalPago}</td>` )
 
@@ -152,7 +152,7 @@
                     },
                 },
                 columnDefs: [ 
-                    { targets: [0, 1, 2, 3], visible: false },
+                    { targets: [0, 1, 2], visible: false },
                     {
                         targets: 6,
                         render: $.fn.dataTable.render.number(',', '.', 2, '')
