cobro extra curso

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -22,6 +22,7 @@
                 <a class="navbar-a" href="{% url 'pagos:pagos_ingreso' %}">Ingreso de Pagos</a>
                 <a class="navbar-a" href="{% url 'pagos:pagos_saldo' %}">Saldos</a>
                 <a class="navbar-a" href="{% url 'pagos:cobros_extra' %}">Cobros Extra</a>
+                <a class="navbar-a" href="{% url 'pagos:cobros_extra_a_curso' %}">Cobros Extra a curso</a>
             </div>
         </div>
         <div class="dropdown">
