remove monto symbol

--- a/mysite/templates/pagos/saldo_consulta.html
+++ b/mysite/templates/pagos/saldo_consulta.html
@@ -28,7 +28,7 @@
                     <th>Codigo de Curso</th>
                     <th>Descripcion de pago</th>
                     <th>Fecha Pago</th>
-                    <th>Monto (Q)</th>
+                    <th>Monto</th>
                 </tr>
             </thead>
         </table>
