caja chica screen and some css(still missing)

--- a/mysite/templates/base_datatable.html
+++ b/mysite/templates/base_datatable.html
@@ -29,21 +29,23 @@
 
 <ul class="navbar-container">
     {% if user.is_authenticated %}
-        <h1 class="supertitle">Bienvenido, {{user}}</h1>
-        <div class="dropdown">
-        <li class="dropbtn">Pagos</li>
-            <div class="dropdown-content">
-                <a class="navbar-a" href="{% url 'pagos:pagos_control' %}">Control de Pagos</a>
-                <a class="navbar-a" href="{% url 'pagos:pagos_solicitados_eliminar' %}">Pagos Solicitados a Eliminar</a>
-                <a class="navbar-a" href="{% url 'pagos:pagos_eliminados' %}">Pagos Eliminados</a>
-                <a class="navbar-a" href="{% url 'pagos:pagos_ingreso' %}">Ingreso de Pagos</a>
-                <a class="navbar-a" href="{% url 'pagos:pagos_saldo' %}">Saldos</a>
-                <a class="navbar-a" href="{% url 'pagos:cobros_extra' %}">Cobros Extra</a>
-                <a class="navbar-a" href="{% url 'pagos:cobros_extra_a_curso' %}">Cobros Extra a curso</a>
+        <div><a href="."><img class="logo" src="../../static/img/plusacademy/imagotipo.jpg"></a></div>
+        <div style="flex-direction: row;">
+            <div class="dropdown navbar-item">
+                <li class="dropbtn item-title">Pagos</li>
+                <div class="dropdown-content">
+                    <a class="navbar-a" href="{% url 'pagos:pagos_control' %}">Control de Pagos</a>
+                    <a class="navbar-a" href="{% url 'pagos:caja_chica' %}">Caja Chica</a>
+                    <a class="navbar-a" href="{% url 'pagos:pagos_solicitados_eliminar' %}">Pagos Solicitados a Eliminar</a>
+                    <a class="navbar-a" href="{% url 'pagos:pagos_eliminados' %}">Pagos Eliminados</a>
+                    <a class="navbar-a" href="{% url 'pagos:pagos_ingreso' %}">Ingreso de Pagos</a>
+                    <a class="navbar-a" href="{% url 'pagos:pagos_saldo' %}">Saldos</a>
+                    <a class="navbar-a" href="{% url 'pagos:cobros_extra' %}">Cobros Extra a Estudiante</a>
+                    <a class="navbar-a" href="{% url 'pagos:cobros_extra_a_curso' %}">Cobros Extra a Curso</a>
+                </div>
             </div>
-        </div>
-        <div class="dropdown">
-            <li class="dropbtn">Usuarios</li>
+            <div class="dropdown navbar-item">
+                <li class="dropbtn item-title">Usuarios</li>
                 <div class="dropdown-content">
                     <a class="navbar-a" href="{% url 'usuarios:usuarios_listado' %}">Listado</a>
                     <a class="navbar-a" href="{% url 'usuarios:createuser_view' %}">Ingreso Usuario</a>
@@ -51,10 +53,11 @@
                     <a class="navbar-a" href="{% url 'usuarios:asignar_curso' %}">Asignar Curso</a>
                 </div>
             </div>
+            <a class="navbar-a" href="{% url 'usuarios:logout' %}"><li class="navbar-item item-title">Logout</li></a>
         </div>
-        <li class="navbar-item"><a class="navbar-a" href="{% url 'usuarios:logout' %}">Logout</a></li>
     {% endif %}
 </ul>
+<h5 class="username">{{user.first_name}} {{user.last_name}}</h5>
 {% block content%}
 
 {% endblock content %}
