--- a/mysite/templates/pagos/saldo_consulta.html
+++ b/mysite/templates/pagos/saldo_consulta.html
@@ -2,9 +2,8 @@
 
 {% block content %}
 {% csrf_token %}
-<div style="margin-top: 20px;">
-    <!-- <a href="http://127.0.0.1:8000/pagos/pagos_excel.xls" download>Descargar</a> -->
-    <div class="container">
+<div style="width:90%; margin: 0 auto;">
+    <div>
         <div class="row justify-content-center">
             <div class="col">
                 <label for="dt1">Fecha de inicio:</label>
