--- a/mysite/templates/usuarios/login.html
+++ b/mysite/templates/usuarios/login.html
@@ -9,7 +9,7 @@
 
 
 <div class="container">
-	<img src="../../static/img/plusacademy/imagotipo.jpg">
+	<img src="../../static/img/plusacademy/imagotipo.jpg" style="width:500px;margin: 0 auto">
 	<form action="" method="post">
 		<h4 class="form-title">Iniciar Sesión</h4>
 				{% csrf_token %}
