--- a/mysite/static/base/styles.css
+++ b/mysite/static/base/styles.css
@@ -1,38 +1,34 @@
 .supertitle { color: #fff; background-color: #333; font-family: 'Raleway',sans-serif; font-size: 30px; font-weight: 800; line-height: 35px; text-align: center; text-transform: uppercase; }
 
+.logo{
+  width: 250px;
+}
+
 .navbar-container {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  background-color: #333;
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid rgb(198, 212, 32);
+  margin-bottom: 50px;
 }
 
-.navbar-item {
-  float: right;
-}
 
-.navbar-item .navbar-a {
-  font-family: 'Raleway',sans-serif;
-  font-weight: 400;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/* Change the link color to #111 (black) on hover */
-.navbar-item .navbar-a:hover {
-  background-color: #111;
-}
-
-.dropbtn {
-  color: white;
+.item-title{
+  color: black;
   padding: 14px 16px;
   font-size: 16px;
   border: none;
   cursor: pointer;
+  display: inline;
+  transition: all 0.3s ease-in-out;
+}
+.item-title:hover {color:rgb(83, 189, 212);}
+
+.navbar-a:hover{
+  text-decoration: none;
 }
 
 .dropdown {
@@ -46,7 +42,7 @@
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 1000;
 }
 
 .dropdown-content a {
@@ -54,19 +50,52 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  transition: all 0.3s ease-in-out;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+  /* background-color: #f1f1f1; */
+  color:rgb(83, 189, 212);
+  text-decoration: none;
+}
+
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
-.dropdown:hover .dropbtn {
-  background-color: darkgray;
+.page-item.active .page-link {
+  background-color: rgb(83, 189, 212) !important;
 }
+.page-item.active .page-link:hover {
+  background-color: rgb(50, 159, 184) !important;
+}
+.page-item.active .page-link:focus {
+  outline-color:transparent !important;
+}
+
+.username {
+  position: absolute;
+  bottom:0;
+  right:0;
+  margin-right:25px;
+  margin-bottom: 25px;
+  font-size: 20px;
+  color:rgb(122, 122, 122);
+  border-bottom: 1px solid rgb(198, 212, 32);
+  padding: 0 5px 5px 5px;
+  -webkit-user-select: none; /* Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+
+}
+
+/* .dropdown:hover .dropbtn {
+  background-color: darkgray;
+} */
 .dtrg-group.dtrg-start.dtrg-level-0 td{
-    background-color: DodgerBlue;
+    background-color: rgb(83, 189, 212);
     color: white;
 }
 tr.dtrg-group.dtrg-start.dtrg-level-1 td {
@@ -81,17 +110,18 @@ td.sub, tr.subCabecera td {
 }
 /* Style buttons */
 .btn-solicitar-eliminacion {
-  background-color: DodgerBlue; /* Blue background */
+  background-color: rgb(83, 189, 212);
   border: none; /* Remove borders */
   color: white; /* White text */
   padding: 8px 10px; /* Some padding */
   font-size: 14px; /* Set a font size */
   cursor: pointer; /* Mouse pointer on hover */  
+  transition: all 0.3s ease-in-out;
 }
 
   /* Darker background on mouse-over */
 .btn-solicitar-eliminacion:hover {
-  background-color: RoyalBlue;
+  background-color: rgb(50, 159, 184);
 }
 .modal-confirm {		
     color: #29457f;
@@ -194,16 +224,18 @@ td.sub, tr.subCabecera td {
 }
 
 .dt-button {
-  background-color: DodgerBlue; /* Blue background */
+  background-color: rgb(83, 189, 212);
   border: none; /* Remove borders */
   color: white; /* White text */
   padding: 8px 10px; /* Some padding */
   font-size: 14px; /* Set a font size */
-  cursor: pointer; /* Mouse pointer on hover */  
+  cursor: pointer; /* Mouse pointer on hover */ 
+  transition: all 0.3s ease-in-out;
+
 }
 
 .dt-button:hover {
-  background-color: RoyalBlue;
+  background-color: rgb(50, 159, 184);
 }
 
 #btn1 {
