--- a/mysite/templates/pagos/pagos_eliminados.html
+++ b/mysite/templates/pagos/pagos_eliminados.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 {% csrf_token %}
-<div style="margin-top: 20px;">
-    <div class="container" style="width:90%">
+<div style="width:90%; margin: 0 auto;">
+    <div>
         <div class="row justify-content-center">
             <div class="col">
                 <label for="dt1">Fecha de inicio:</label>
