--- a/mysite/templates/pagos/cobros_extra.html
+++ b/mysite/templates/pagos/cobros_extra.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="container">
-	<form action="" method="post">
+	<form action="" method="post" class="input-form">
 		<h4 class="form-title">Ingresar Cobro Extra</h4>
 				{% csrf_token %}
 				{{form_cobros_extra}}
