--- a/mysite/templates/pagos/ingresar.html
+++ b/mysite/templates/pagos/ingresar.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-	<form action="" method="post">
+	<form action="" method="post" class="input-form">
 		<h4 class="form-title">Ingresar Pago</h4>
 				{% csrf_token %}
 				{{form}}
