--- a/mysite/templates/usuarios/asignar_curso.html
+++ b/mysite/templates/usuarios/asignar_curso.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-	<form action="" method="post">
+	<form action="" method="post" class="input-form">
 		<h4 class="form-title">Asignar Curso</h4>
 				{% csrf_token %}
 				{{form1}}
