--- a/mysite/templates/usuarios/create_user.html
+++ b/mysite/templates/usuarios/create_user.html
@@ -5,7 +5,7 @@
 <hr> -->
 
 <div class="container">
-	<form action="" method="post">
+	<form action="" method="post" class="input-form">
 		<h4 class="form-title">Crear Usuario</h4>
 				{% csrf_token %}
 				{{form1}}
