--- a/mysite/templates/pagos/cobros_extra.html
+++ b/mysite/templates/pagos/cobros_extra.html
@@ -6,7 +6,7 @@
 
 <div class="container">
 	<form action="" method="post" class="input-form">
-		<h4 class="form-title">Ingresar Cobro Extra</h4>
+		<div class="form-title-container"><h4 class="form-title">Ingresar Cobro Extra</h4></div>
 				{% csrf_token %}
 				{{form_cobros_extra}}
 		<div class="btn-container">
