--- a/mysite/static/general/styles.css
+++ b/mysite/static/general/styles.css
@@ -141,9 +141,10 @@ td, th {
   border-left-width: 10%;
   border-style: double;
   padding-left: 1%;
-  padding-right: 1%;
-  padding-top: 2%;
+  padding-right: 2%;
+  padding-top: 0%;
   padding-bottom: 1%;
+  border-radius: 2%;
 }
 
 .input-form input
@@ -151,6 +152,13 @@ td, th {
   color: #000;
   border-style: solid;
   background-color: white;
+  margin: 5px;
+}
+
+.input-form label 
+{
+  margin: 5px;
+  margin-left: 0;
 }
 
 .input-form  .btn-buscar
@@ -161,5 +169,36 @@ td, th {
 .input-form  .btn-buscar:hover
 {
   background-color: #1743473b;
-  min-width: 31%;
+  min-width: 30.5%;
+}
+
+.input-form .form-title
+{
+  font-size: 4vh;
+  border: #c0ca4f;
+  border-style: solid;
+  border-right-width: 0;
+  border-top-width: 0;
+  border-bottom-width: 10%;
+  border-left-width: 0;
+}
+
+.input-form .form-title-container
+{
+  border: #c0ca4f;
+  border-style: double;
+  border-right-width: 0;
+  border-top-width: 0;
+  border-bottom-width: 1%;
+  border-left-width: 0;
+  align-items: center;
+  width: 60%;
+  margin-left: 20%;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.input-form select
+{
+  margin: 5px;
 }
