--- a/mysite/static/base/styles.css
+++ b/mysite/static/base/styles.css
@@ -75,6 +75,8 @@
 }
 
 .username {
+  z-index: 2;
+  opacity: 0.2;
   position: absolute;
   bottom:0;
   right:0;
@@ -82,8 +84,6 @@
   margin-bottom: 25px;
   font-size: 20px;
   color:rgb(122, 122, 122);
-  border-bottom: 1px solid rgb(198, 212, 32);
-  padding: 0 5px 5px 5px;
   -webkit-user-select: none; /* Safari */        
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+/Edge */
