--- a/mysite/templates/pagos/caja_chica.html
+++ b/mysite/templates/pagos/caja_chica.html
@@ -18,18 +18,18 @@
                 <input type="text" id="user_code">
             </div>
         </div>
-        <table id="data_table" class="table table-striped table-bordered table-hover" style="width:100%;">
+        <table id="data_table" class="table table-bordered table-hover" style="width:100%;">
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Fecha Pago</th>
-                    <th>Codigo de Estudiante</th>
+                    <th>Tipo</th>
+                    <th>Fecha Transacción</th>
+                    <th>Codigo Usuario</th>
                     <th>Codigo De Curso</th>
-                    <th>Tipo de Pago</th>
-                    <th>Forma de Pago</th>
+                    <th>Tipo Transacción</th>
+                    <th>Forma Transacción</th>
                     <th>Tipo de Moneda</th>
                     <th>Monto</th>
-                    <th>Acciones</th>
+                    <!-- <th>Acciones</th> -->
                 </tr>
             </thead>
         </table>
@@ -46,7 +46,7 @@
                                     <table id="pago_details" class="table table-bordered" style="margin: 0 auto">
                                         <thead>
                                         <tr>
-                                                <th>Codigo Estudiante</th>
+                                                <th>Codigo Usuario</th>
                                                 <th>Codigo Curso</th>
                                                 <th>Tipo de Pago</th>
                                                 <th>Forma de Pago</th>
@@ -161,7 +161,7 @@
                 orderCellsTop: true,
                 fixedHeader: true,
                 columns: [
-                    { data: 'id' },
+                    { data: 'tipo' },
                     { data: 'fecha_pago' },
                     { data: 'user' },
                     { data: 'codigo_curso' },
@@ -169,15 +169,16 @@
                     { data: 'forma_pago' },
                     { data: 'moneda' },
                     { data: 'cantidad' },
-                    {
-                        data: null,
-                        orderable: false,
-                        defaultContent: '<button class="btn-solicitar-eliminacion"><i class="fa fa-trash"></i> Solicitar Eliminación</button>',
-                     },
+
+                    // {
+                    //     data: null,
+                    //     orderable: false,
+                    //     defaultContent: '<button class="btn-solicitar-eliminacion"><i class="fa fa-trash"></i> Solicitar Eliminación</button>',
+                    //  },
                 ],
                 order: [[2, 'asc'], [4, 'asc']],
                 rowGroup: {
-                    dataSrc: [ 'userInfo', 'tipo_pago' ],
+                    dataSrc: ['tipo'],
                     endRender: ( rows, group, index ) => {
                         let totalPago = rows
                         .data()
@@ -185,14 +186,25 @@
                         .reduce((a, b) => {
                             return a + b*1
                         }, 0)
+                        let totalGastos = rows
+                        .data()
+                        .reduce((a, b) => {
+                            return a + ((b.tipo === 'Gastos') ? b.cantidad : 0)
+                        }, 0)
+                        let totalPagos = rows
+                        .data()
+                        .reduce((a, b) => {
+                            return a + ((b.tipo === 'Pagos') ? b.cantidad : 0)
+                        }, 0)
+                        console.log(index)
                         return $('<tr/>')
-                        .append( `<td colspan="5" class=${index%2===0 ? "tot" : "sub"}><strong>${index%2===0 ?  'Total:' : 'SubTotal:'}</strong></td>` )
-                        .append( `<td colspan="3"><strong>Q${numberFormat.format(totalPago)}</strong></td>` )
+                        .append( `<td colspan="6" style="background-color: rgb(116, 186, 255); padding-left: 1.5em;" class=${index%2===0 ? "tot" : "sub"}>${index%2===0 ?  'SubTotal:': ''}</td>` )
+                        .append( `<td style="background-color: rgb(116, 186, 255);">Q${numberFormat.format(totalPago)}</td>` )
 
                     },
                 },
                 columnDefs: [ 
-                    { targets: [0, 2], visible: false },
+                    { targets: [0], visible: false },
                     { searchable: false, targets: 5 },
                     {
                         targets: 7,
