--- a/mysite/templates/pagos/caja_chica.html
+++ b/mysite/templates/pagos/caja_chica.html
@@ -136,6 +136,20 @@
     $(document).ready(() => {
         let formatOptions = {style: 'decimal', minimumFractionDigits: 2, minimumFractionDigits: 2};
         let numberFormat = new Intl.NumberFormat('en-US', formatOptions);
+        let today = new Date()
+        let dd = today.getDate()
+        let mm = today.getMonth()+1;
+        let yyyy = today.getFullYear()
+        if(dd<10) 
+        {
+            dd='0'+dd
+        } 
+
+        if(mm<10) 
+        {
+            mm='0'+mm
+        } 
+        today = 'cajaChica_'+dd+'_'+mm+'_'+yyyy
         let table = $('#data_table').DataTable({
             ajax: {
                     url: '/pagos/pagos/',
@@ -153,7 +167,26 @@
                 scrollCollapse: true,
                 "sDom":"Bfrtip",
                 buttons: [
-                    'copy', 'csv', 'excel', 'pdf', 'print'
+                    {
+                        extend: 'copy',
+                        filename: today,
+                    },
+                    {
+                        extend: 'csv',
+                        filename: today,
+                    },
+                    {
+                        extend: 'excel',
+                        filename: today,
+                    },
+                    {
+                        extend: 'pdf',
+                        filename: today,
+                    },
+                    {
+                        extend: 'print',
+                        filename: today,
+                    }
                 ],
                 language: {
                     url: '//cdn.datatables.net/plug-ins/1.10.24/i18n/Spanish.json'
@@ -196,7 +229,6 @@
                         .reduce((a, b) => {
                             return a + ((b.tipo === 'Pagos') ? b.cantidad : 0)
                         }, 0)
-                        console.log(index)
                         return $('<tr/>')
                         .append( `<td colspan="6" style="background-color: rgb(116, 186, 255); padding-left: 1.5em;" class=${index%2===0 ? "tot" : "sub"}>${index%2===0 ?  'SubTotal:': ''}</td>` )
                         .append( `<td style="background-color: rgb(116, 186, 255);">Q${numberFormat.format(totalPago)}</td>` )
