--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -24,6 +24,8 @@
                 <a class="navbar-a" href="{% url 'pagos:pagos_saldo' %}">Saldos</a>
                 <a class="navbar-a" href="{% url 'pagos:cobros_extra' %}">Cobros Extra</a>
                 <a class="navbar-a" href="{% url 'pagos:cobros_extra_a_curso' %}">Cobros Extra a curso</a>
+                <a class="navbar-a" href="{% url 'pagos:pantalla_pivote' %}">Tabla Pivote</a>
+                
             </div>
         </div>
         <div class="dropdown">
