--- a/mysite/templates/base_datatable.html
+++ b/mysite/templates/base_datatable.html
@@ -42,6 +42,7 @@
                     <a class="navbar-a" href="{% url 'pagos:pagos_saldo' %}">Saldos</a>
                     <a class="navbar-a" href="{% url 'pagos:cobros_extra' %}">Cobros Extra a Estudiante</a>
                     <a class="navbar-a" href="{% url 'pagos:cobros_extra_a_curso' %}">Cobros Extra a Curso</a>
+                    <a class="navbar-a" href="{% url 'pagos:pantalla_pivote' %}">Tabla Pivote</a>
                 </div>
             </div>
             <div class="dropdown navbar-item">
